--- a/30days/day-12/index.html
+++ b/30days/day-12/index.html
@@ -11,11 +11,23 @@
         <h3>Welcome to Day 12</h3>
         <h1>Liter News</h1>
         <p>Your daily dose of literary news and updates.</p>
-        <form action="">
+        <form name="submit-to-google-sheet">
             <input type="email" name="email" placeholder="Enter your email" required>
             <button type="submit"><img src="../day-12/send-icon.png" width="30px"></button>
         </form>
         <span>thank you for subscribing!</span>
     </div>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbx2ZQ63C7BrhkQwtbEZ8pQPD3kxhLW1bnBJm8Hmydnp0UmEYIjQmw8hlpecapEWr5ze0w/exec'
+        const form = document.forms['submit-to-google-sheet']
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => console.log('Success!', response))
+            .catch(error => console.error('Error!', error.message))
+        })
+    </script>
+    <script src="../day-12/script.js"></script>
 </body>
 </html>
