--- a/30days/day-12/index.html
+++ b/30days/day-12/index.html
@@ -15,19 +15,29 @@
             <input type="email" name="email" placeholder="Enter your email" required>
             <button type="submit"><img src="../day-12/send-icon.png" width="30px"></button>
         </form>
-        <span>thank you for subscribing!</span>
+        <span></span>
     </div>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbx2ZQ63C7BrhkQwtbEZ8pQPD3kxhLW1bnBJm8Hmydnp0UmEYIjQmw8hlpecapEWr5ze0w/exec'
-        const form = document.forms['submit-to-google-sheet']
+        const form = document.forms['submit-to-google-sheet'];
+        const span = document.querySelector("span"),
+        input = document.querySelector("input")
 
         form.addEventListener('submit', e => {
             e.preventDefault()
             fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => console.log('Success!', response))
-            .catch(error => console.error('Error!', error.message))
+            .then(response => {
+                span.classList.add("active")
+                span.innerText = "thank you";
+                input.value = ""
+            }
+            )
+            .catch(error =>{
+                span.classList.add("active")
+                span.inn = "error";
+                input.value = ""
+            })
         })
     </script>
-    <script src="../day-12/script.js"></script>
 </body>
 </html>
